[gd_scene load_steps=2 format=3 uid="uid://dve8jb5bcsflx"]

[ext_resource type="Script" path="res://scripts/preview_pane.gd" id="1_oruot"]

[node name="PreviewPane" type="Node2D"]
script = ExtResource("1_oruot")

[node name="Slot1" type="Node2D" parent="."]

[node name="Slot2" type="Node2D" parent="."]

[node name="Slot3" type="Node2D" parent="."]
